get transactions added
